ocfiles/my-pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: "my-pod2"
  labels:
    app: "my-app"
spec:
  containers:
  - name: "my-container"
    image: "docker-registry.default.svc:5000/openshift/httpd:latest"
    ports:
    - containerPort: 8080
      protocol: TCP
    volumeMounts:
    - name: "var-www"
      mountPath: "/var/www"

  volumes:
    - name: "var-www"
      persistentVolumeClaim:
        claimName: "my-pvc"
