ocfiles/route-openshift-training.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: 2018-10-29T14:44:32Z
  name: openshift-training
  namespace: project12
spec:
  host: jmaoctrain.23.97.190.179.nip.io
  to:
    kind: Service
    name: openshift-training
    weight: 100
  wildcardPolicy: None
